Getting ready for an electron app

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "PROJECT-NAME",
+  "name": "@valence/valence-shell",
   "version": "0.1.0",
-  "description": "$PROJECT_DESCRIPTION$",
+  "description": "A next generation graphical command line shell",
   "keywords": [],
   "author": "Brian Mearns <mearns.b@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mearns/PROJECT-NAME.git"
+    "url": "git+https://github.com/mearns/valence-shell.git"
   },
   "bugs": {
-    "url": "https://github.com/mearns/PROJECT-NAME/issues"
+    "url": "https://github.com/mearns/valence-shell/issues"
   },
-  "homepage": "https://github.com/mearns/PROJECT-NAME#readme",
+  "homepage": "https://github.com/mearns/valence-shell#readme",
   "engines": {
     "node": "^10.9.0"
   },
@@ -28,7 +28,10 @@
     "test": "nyc npm run test-only",
     "test-only": "mocha test/src/",
     "verify": "npm run check && npm run test",
-    "start": "node ."
+    "rebuild": "electron-rebuild",
+    "build": "babel src/ -d dist/src/ && copyfiles 'resources/**/*' dist/",
+    "watch": "babel src/ -d dist/src --watch src/",
+    "start": "node node_modules/.bin/electron ."
   },
   "husky": {
     "hooks": {
@@ -36,23 +39,31 @@
     }
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.0",
+    "@babel/plugin-transform-react-jsx": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^9.0.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "husky": "^2.3.0",
-    "mocha": "^6.1.4",
-    "node": "^10.9.0",
+    "electron-rebuild": "^1.8.6",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^3.0.9",
+    "mocha": "^6.2.2",
+    "node": "^12.13.0",
     "nyc": "^14.1.1",
-    "prettier": "^1.17.1",
-    "pretty-quick": "^1.10.0",
-    "sinon": "^7.3.2",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^2.0.1",
+    "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "electron": "^7.1.0"
+  }
 }
