--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
         "semi": [2, "always"],
         "no-extra-semi": 2,
         "semi-spacing": [2, { "before": false, "after": true }],
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "no-undef": "error"
     }
 }
