--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/core": "^7.7.0",
     "@babel/plugin-transform-react-jsx": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
+    "@babel/register": "^7.7.0",
     "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
     "electron-rebuild": "^1.8.6",
@@ -64,6 +65,7 @@
     "sinon-chai": "^3.3.0"
   },
   "dependencies": {
-    "electron": "^7.1.0"
+    "electron": "^7.1.0",
+    "xstream": "^11.11.0"
   }
 }
